src/test/compile-fail/arg-type-mismatch.rs

// error-pattern: mismatched types

fn f(int x) {
}

fn main() {
  let () i;
  i = f(());
}